[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "requests",
    "pydantic"
]
description="A Python client for the Video Jungle API"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.8"
name = "videojungle"
version = "0.1.18"
readme = "README.md"

[project.urls]
repository = "https://github.com/burningion/video-jungle-python"