[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "videojungle"
version = "0.1.61"
dependencies = [
    "requests",
    "pydantic",
    "httpx"
]
description="A Python client for the Video Jungle API"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.8"
readme = "README.md"

[project.urls]
repository = "https://github.com/burningion/video-jungle-python"